--- a/nakitelTest/css/src/style.css
+++ b/nakitelTest/css/src/style.css
@@ -11,7 +11,7 @@
   background-color: #ff233e;
 }
 .wrapper-container {
-  width: 1200px;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -44,12 +44,13 @@ header {
   background-color: #ef001d;
 }
 header .wrapper {
-  width: 1200px;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  justify-content: space-between;
   color: white;
   font-family: "Helvetica Neue Light";
-  display: flex;
   justify-content: flex-end;
   align-items: center;
 }
@@ -57,7 +58,7 @@ header .wrapper .menu-icon {
   width: 40px;
   height: 40px;
   margin-top: 10px;
-  margin-right: 600px;
+  margin-right: 51%;
   position: relative;
 }
 header .wrapper .menu-icon:hover {
@@ -126,6 +127,7 @@ header .wrapper .cart {
 header .wrapper .cart p {
   margin-top: 0;
   margin-bottom: 0;
+  white-space: nowrap;
 }
 header .wrapper button {
   width: 20px;
@@ -140,7 +142,7 @@ header .wrapper button {
   box-sizing: content-box;
 }
 header .wrapper button:last-of-type {
-  margin-right: 40px;
+  margin-right: 3%;
   margin-left: 0px;
 }
 header .wrapper button:hover {
@@ -197,7 +199,7 @@ main {
   z-index: 1;
 }
 #first .upper {
-  width: 1200px;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -332,7 +334,7 @@ main {
   background-color: #ff233e;
 }
 #first .doors {
-  width: 1200px;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -386,78 +388,80 @@ main {
 #carousel {
   width: 100%;
 }
-#carousel .slider {
+#carousel .jcarousel-prev,
+#carousel .jcarousel-next {
+  position: absolute;
+  top: 160px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  background: #4E443C;
+  color: #fff;
+  text-decoration: none;
+  text-shadow: 0 0 1px #000;
+  font: 24px/27px Arial, sans-serif;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  -webkit-box-shadow: 0 0 2px #999;
+  -moz-box-shadow: 0 0 2px #999;
+  box-shadow: 0 0 2px #999;
+}
+#carousel .jcarousel-prev {
+  left: -50px;
+}
+#carousel .jcarousel-next {
+  right: -50px;
+}
+#carousel .jcarousel-prev:hover span,
+#carousel .jcarousel-next:hover span {
+  display: block;
+}
+#carousel .jcarousel-prev.inactive,
+#carousel .jcarousel-next.inactive {
+  opacity: .5;
+  cursor: default;
+}
+#carousel .jcarousel-wrapper {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
   position: relative;
 }
-#carousel .slider .js_slide {
-  background-size: cover;
-  background-repeat: no-repeat;
-  font-family: "Helvetica Neue Regular";
-  font-style: italic;
-  color: white;
+#carousel .jcarousel {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
   border: 5px solid white;
   box-shadow: 0 3px 10px rgba(1, 1, 1, 0.75), inset 0 8px 11px rgba(1, 1, 1, 0.75);
 }
-#carousel .slider .item1 {
-  background-image: url(../../img/slider-img1.png);
-  background-position-x: -9px;
-  background-position-y: -6px;
-  height: 340px;
-  width: 1158px;
-  background-size: inherit;
+#carousel .jcarousel ul {
+  width: 20000em;
+  position: relative;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
-#carousel .slider .item2 {
-  background-image: url(../../img/slider-img2.jpg);
-  background-position-y: -180px;
+#carousel .jcarousel ul li {
+  width: 1063px;
+  height: 300px;
+  float: left;
   background-size: cover;
-  width: 1162px;
-  height: 341px;
+  background-repeat: no-repeat;
 }
-#carousel .slider .item3 {
+#carousel .jcarousel ul li.item1 {
+  background-size: inherit;
+  background-position-x: -10px;
+  background-position-y: -10px;
+  background-image: url(../../img/slider-img1.png);
+}
+#carousel .jcarousel ul li.item2 {
+  background-position-y: -170px;
+  background-image: url(../../img/slider-img2.jpg);
+}
+#carousel .jcarousel ul li.item3 {
+  background-position-y: -33px;
   background-image: url(../../img/slider-img3.jpg);
-}
-#carousel .frame {
-  /**
-                 * (optional) wrapper width, specifies width of the slider frame.
-                 */
-  width: 1170px;
-  position: relative;
-  font-size: 1em;
-  line-height: 0;
-  overflow: hidden;
-  white-space: nowrap;
-  margin-left: auto;
-  margin-right: auto;
-}
-#carousel .slides {
-  display: inline-block;
-}
-#carousel li {
-  position: relative;
-  display: inline-block;
-  /**
-                 * (optional) if the content inside the slide element has a defined size.
-                 */
-  width: 1173px;
-  height: 347px;
-}
-#carousel .prev,
-#carousel .next {
-  position: absolute;
-  top: 50%;
-  margin-top: -25px;
-  display: block;
-  cursor: pointer;
-}
-#carousel .next {
-  right: 205px;
-}
-#carousel .prev {
-  left: 215px;
-}
-#carousel .next svg,
-#carousel .prev svg {
-  width: 25px;
 }
 #content {
   width: 100%;
@@ -470,11 +474,14 @@ main {
   font-size: 3em;
 }
 #content .wrapper {
-  width: 1200px;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   justify-content: space-between;
+}
+#content .wrapper nav {
+  margin-right: 1%;
 }
 #content .wrapper nav ul {
   list-style: none;
@@ -495,7 +502,7 @@ main {
   color: #ef001d;
 }
 #content .wrapper article {
-  width: 770px;
+  width: 90%;
   background-color: white;
   padding-top: 24px;
   padding-left: 50px;
@@ -527,6 +534,8 @@ main {
 }
 #content .wrapper .banners {
   text-align: -webkit-center;
+  width: 30%;
+  margin-left: 1%;
 }
 #content .wrapper .banners .call {
   font-size: 1.1em;
@@ -612,7 +621,7 @@ footer .footer-tape {
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.75), inset 0 2px 6px rgba(0, 0, 0, 0.75);
 }
 footer .footer-tape .wrapper {
-  width: 1200px;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -646,9 +655,9 @@ footer .footer-tape .wrapper nav ul li a:hover {
 footer .footer-tape .wrapper nav ul li:last-of-type a {
   margin-right: 0;
 }
-@media screen and (max-width: 325px) {
+@media screen and (max-width: 450px) {
   header .wrapper {
-    width: 290px;
+    width: 90%;
     justify-content: space-between;
   }
   header .wrapper .menu-icon {
@@ -656,7 +665,7 @@ footer .footer-tape .wrapper nav ul li:last-of-type a {
     margin-left: 10px;
   }
   header .wrapper button:first-of-type {
-    margin-left: 120px;
+    margin-left: 50%;
   }
   header .wrapper button:last-of-type {
     margin-right: 10px;
@@ -696,7 +705,7 @@ footer .footer-tape .wrapper nav ul li:last-of-type a {
     display: flex;
     flex-direction: column;
     height: 570px;
-    margin-bottom: 0px;
+    margin-bottom: 0px !important;
   }
   #first .upper {
     width: 100%;
@@ -709,6 +718,8 @@ footer .footer-tape .wrapper nav ul li:last-of-type a {
     display: flex;
     margin-bottom: 100px;
     margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
   }
   #first .upper .logo img {
     height: 80px;
@@ -729,8 +740,9 @@ footer .footer-tape .wrapper nav ul li:last-of-type a {
     font-size: 1.5em;
   }
   #first .upper .leftGroup .socials {
-    margin-left: 10px;
     width: 90%;
+    margin-left: auto;
+    margin-right: auto;
   }
   #first .upper .leftGroup .socials a {
     min-width: 50px;
@@ -744,18 +756,19 @@ footer .footer-tape .wrapper nav ul li:last-of-type a {
   #first .upper .leftGroup .cart p:last-of-type {
     font-size: 1.2em;
   }
-  #first .upper .rightGroup {
+  #first .upper .rightGroup.forWeight {
+    display: block;
     order: 3;
   }
-  #first .upper .rightGroup > p {
+  #first .upper .rightGroup.forWeight > p {
     font-size: 1.2em;
   }
-  #first .upper .rightGroup button {
+  #first .upper .rightGroup.forWeight button {
     width: 230px;
     height: 100px;
     font-size: 1.8em;
   }
-  #first .upper .rightGroup button span {
+  #first .upper .rightGroup.forWeight button span {
     font-size: 1.3em;
   }
   #first .doors {
@@ -776,7 +789,7 @@ footer .footer-tape .wrapper nav ul li:last-of-type a {
     display: none;
   }
   #content .wrapper article {
-    width: 290px;
+    width: 90% !important;
     margin-left: auto;
     margin-right: auto;
     padding-top: 35px;
@@ -805,6 +818,117 @@ footer .footer-tape .wrapper nav ul li:last-of-type a {
     justify-content: center;
   }
   footer .footer-tape .wrapper nav {
+    display: none;
+  }
+}
+@media screen and (max-width: 1070px) {
+  header .wrapper .menu-icon {
+    margin-right: 40%;
+  }
+  #first .doors div:last-child {
+    display: none;
+  }
+  #content nav {
+    display: none;
+  }
+}
+@media screen and (max-width: 950px) {
+  header .wrapper .menu-icon {
+    margin-right: 30%;
+  }
+  #first .upper .leftGroup > a:first-of-type {
+    font-size: 1.5em;
+  }
+  #first .upper .leftGroup a:last-of-type {
+    font-size: 1.2em;
+  }
+  #content .wrapper .banners {
+    margin-left: 3%;
+  }
+}
+@media screen and (max-width: 820px) {
+  header .wrapper .menu-icon {
+    margin-right: 20%;
+  }
+  #first .doors div:first-child {
+    display: none;
+  }
+  #content article p:nth-child(n+5) {
+    display: none;
+  }
+}
+@media screen and (max-width: 750px) {
+  #content .wrapper {
+    flex-direction: column;
+  }
+  #content .wrapper article {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #content .wrapper .banners {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  #content .wrapper .banners div {
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+}
+@media screen and (max-width: 700px) {
+  header .wrapper .menu-icon {
+    margin-right: 30%;
+  }
+  header .cart {
+    display: none;
+  }
+  #first .upper .rightGroup {
+    display: none;
+  }
+  #first .upper .logo {
+    order: 1;
+    margin-top: 20px;
+  }
+  #first .upper .leftGroup {
+    order: 2;
+  }
+  #content .wrapper article {
+    width: 100%;
+  }
+  footer {
+    height: 220px;
+  }
+  footer .footer-tape {
+    margin-top: 100px;
+  }
+  footer .footer-tape .wrapper {
+    justify-content: center;
+  }
+  footer .footer-tape .wrapper nav {
+    display: none;
+  }
+}
+@media screen and (max-width: 600px) {
+  header .wrapper .menu-icon {
+    margin-right: 15%;
+  }
+  #first {
+    margin-bottom: 200px;
+  }
+  #first .doors {
+    justify-content: space-around;
+  }
+  #first .doors div:nth-child(2) {
+    display: none;
+  }
+  #carousel {
     display: none;
   }
 }
