--- a/ping/src/css/style.less
+++ b/ping/src/css/style.less
@@ -136,6 +136,8 @@ header {
   padding-bottom: 60px;
   background-image: linear-gradient(to top, #322539 0%, #745083 100%);
   color: @text-color-white;
+  // why shadow didn't work? 
+  box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.75);
 
   article {
     padding-left: 51px;
@@ -159,7 +161,57 @@ header {
   padding-bottom: 30px;
   background-color: @light-gray;
 
+  .review {
+    background-color: @text-color-white;
+    padding: 35px;
+    position: relative;
+    margin-bottom: 60px;
+
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 49px;
+      height: 49px;
+      // background-color: blue;
+      background-image: url(../../img/review-img.png);
+      top: 34px;
+      left: -19px;
+    }
+
+    .title {
+      font-family: @League-gothic-regular;
+      font-size: 24px;
+      text-transform: uppercase;
+    }
+
+    p:first-child {
+      color: black;
+      margin-bottom: 0px;
+    }
+    p:nth-child(2) {
+      color: @text-color-pink;
+    }
+  }
+
   .articles {
+    padding-left: 0px;
+    padding-right: 0px;
+
+    article {
+      padding-left: 55px;
+      background-image: url(../../img/articles-img.png);
+      background-repeat: no-repeat;
+    }
+    h4 {
+      font-family: @Open-sans-bold;
+      font-size: 16px;
+    }
+
+    p {
+      font-size: 16px;
+    }
+
     a {
       .url;
       color: black;
@@ -174,13 +226,15 @@ header {
           padding: 0;
           list-style: none;
           display: flex;
-          justify-content: space-between;
+          justify-content: center;
           text-align: center;
-          // flex-wrap: wrap;
+          flex-wrap: wrap;
 
           li {
             width: 70px;
             height: 70px;
+            margin-right: 25px;
+            margin-left: 25px;
           }
   }
   }
@@ -199,7 +253,8 @@ footer {
   width: 100%;
   .paddings;
   padding-top: 40px;
-  background-color: grey;
+  // background-color: grey;
+  background-image: url(../../img/footer-bg.jpg);
 }
 
 @media screen and (max-width: 767px) {
@@ -234,14 +289,15 @@ footer {
       }
     }
   }
+
+  .logos {
+    ul {
+      justify-content: space-between;
+    }
+  }
 }
 
 @media screen and (min-width: 960px) {
-  .centrator {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-  }
 
   header {
     .logo {
@@ -254,6 +310,15 @@ footer {
     }
   }
 
+}
+
+@media screen and (min-width: 980px) {
+  .centrator {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .wrapper-header,
   .wrapper-slider,
   .wrapper-about,
@@ -264,6 +329,7 @@ footer {
    {
     .centrator;
   }
+
 }
 
-// 960-px - main has some white space on right-side 
+// has horizontal scroll on 768px and 960px
