--- a/ping/src/css/style.less
+++ b/ping/src/css/style.less
@@ -37,12 +37,9 @@ body {
   font-family: @Open-sans-light;
   font-size: 16px;
   line-height: 24px;
-  // background-color: grey;
   background-image: url(../../img/body-bg.jpg);
-  // background-position: center;
-  background-size: cover;
+  background-position-x: center;
   background-repeat: no-repeat;
-      background-position-x: 47%;
 }
 
 main.container-fluid {
