--- a/ping/src/css/style.less
+++ b/ping/src/css/style.less
@@ -62,6 +62,7 @@ header {
   width: 100%;
   .paddings;
   padding-top: 60px;
+  margin-bottom: 75px;
   // background-color: grey;
 
     .logo {
@@ -87,12 +88,18 @@ header {
     list-style: none;
     display: flex;
     flex-direction: row;
-    margin-bottom: 75px;
+    // margin-bottom: 75px;
 
     li {
       a {
         margin-right: 20px;
         .url;
+        font-size: 24px;
+
+        &:hover,
+        .active {
+          border-bottom: 2px solid @text-color-pink;
+        }
       }
     }
   }
@@ -134,16 +141,21 @@ header {
   background-image: linear-gradient(to top, #322539 0%, #745083 100%);
   color: @text-color-white;
   // why shadow didn't work? 
-  box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.75);
+  // box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.75);
 
   article {
     padding-left: 51px;
     background-image: url(../../img/about-sprite.png);
     background-repeat: no-repeat;
+        margin-bottom: 50px;
 
     a {
       .url;
       float: right;
+
+      &:hover {
+        text-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
+      }
     }
   }
 }
@@ -157,6 +169,7 @@ header {
   padding-top: 90px;
   padding-bottom: 30px;
   background-color: @light-gray;
+  box-shadow: inset 0px 2px 4px 0px rgba(0,0,0,0.5);
 
   .review {
     background-color: @text-color-white;
@@ -213,7 +226,13 @@ header {
       .url;
       color: black;
       float: right;
+
+            &:hover {
+        // text-decoration: underline;
+        border-bottom: 2px solid @text-color-pink;
+      }
     }
+
   }
 
   .logos {
@@ -229,11 +248,36 @@ header {
 
           li {
             width: 70px;
-            height: 70px;
+            height: 64px;
             margin-right: 25px;
             margin-left: 25px;
+            margin-bottom: 25px;
+            background-image: url(../../img/logos-sprite.png);
+
+            &:nth-child(2) {
+              background-position-x: -910px;
+            }
+
+            &:nth-child(3) {
+                  background-position-x: -1042px;
+            }
+
+            &:nth-child(4) {
+                  background-position-x: -1179px;
+            }
+
+            &:nth-child(5) {
+                  background-position-x: -1300px;
+                  width: 110px;
+                      margin-right: 10px;
+            }
+
+            &:last-child{
+              background-position-x: -1472px;
+              margin-left: 10px;
+            }
           }
-  }
+    }
   }
 }
 
@@ -252,6 +296,15 @@ footer {
   padding-top: 40px;
   // background-color: grey;
   background-image: url(../../img/footer-bg.jpg);
+
+  p {
+    color: @text-color-white;
+    text-align: center;
+  }
+
+      .wrapper-footer {
+    margin-bottom: 70px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -276,8 +329,13 @@ footer {
 
     .header-nav {
       clear: both;
+
+      a {
+        font-size: 24px;
+      }
     }
   }
+
 
   .about {
     article {
@@ -290,6 +348,19 @@ footer {
   .logos {
     ul {
       justify-content: space-between;
+    }
+  }
+
+  .footer-nav {
+    a {
+      font-size: 20px;
+    }
+  }
+
+  footer {
+    p {
+      float: right;
+      padding-right: 20px;
     }
   }
 }
@@ -305,6 +376,20 @@ footer {
       float: right;
       clear: right;
     }
+  }
+
+  .about {
+    article:nth-child(2) {
+          background-position-x: -335px;
+    }
+
+    article:last-child {
+      background-position-x: -665px;
+    }
+  }
+
+  .footer-nav {
+    float: left;
   }
 
 }
