pingbuller - add bower top project, correct paths to bootstrap and jquery, add carousel

--- a/ping/src/css/style.less
+++ b/ping/src/css/style.less
@@ -62,7 +62,7 @@ header {
   width: 100%;
   .paddings;
   padding-top: 60px;
-  margin-bottom: 75px;
+  // margin-bottom: 75px;
   // background-color: grey;
 
     .logo {
@@ -106,11 +106,40 @@ header {
 }
 
 .slider {
+  .carousel-indicators {
+    bottom: -50px;
+
+    li {
+        background-color: rgba(0,0,0, 0.3);
+        border: none;
+        width: 15px;
+        height: 15px;
+    }
+
+    .active {
+        background-color: @text-color-white;
+        width: 15px;
+        height: 15px;
+        margin: 1px;
+        border: 3px solid rgba(0,0,0, 0.6);
+    }
+  }
+
+  .carousel-control.left,
+  .carousel-control.right {
+    background-image: none;
+  }
+
   .wrapper-slider {
     margin-top: 30px;
     margin-bottom: 100px;
+
     // delete next line after build slider
-    height: 200px;
+    // height: 200px;
+
+    .item {
+      height: 200px;
+    }
   }
 
   h1,
@@ -130,7 +159,7 @@ header {
    }
 }
 
-
+// iphone-img - 274px-434px
 
 .about {
   width: 100%;
@@ -336,6 +365,65 @@ footer {
     }
   }
 
+.slider {
+      position: relative;
+
+      &::before {
+          content: "";
+          display: block;
+          position: absolute;
+          top: 10%;
+          bottom: 10%;
+          width: 100%;
+          background-color: rgba(0,0,0, 0.3);
+      }
+
+  .carousel-control {
+    width: 50px;
+  }
+
+  h1, 
+  h2 {
+    text-align: left;
+  }
+
+  .carousel-indicators {
+    margin-left: 0;
+  }
+
+  .carousel-caption {
+    // display: flex;
+    float: left;
+    position: relative;
+    padding-top: 130px;
+    text-align: left;
+    width: 272px;
+    left: 8%;
+
+    .text {
+      font-size: 16px;
+      // line-height: 30px;
+      font-family: @Open-sans-light;
+    }
+  }
+
+  .carousel-control .glyphicon-chevron-right {
+    right: 30%;
+  }
+
+  .carousel-control .glyphicon-chevron-left {
+    left: 30%;
+  } 
+
+  .img-container {
+    background-image: url(../../img/iphone-img.png);
+    background-repeat: no-repeat;
+    width: 274px;
+    height: 434px;
+    float: right;
+    margin-right: 60px;
+  }
+}
 
   .about {
     article {
