--- a/ping/src/css/style.less
+++ b/ping/src/css/style.less
@@ -351,6 +351,27 @@ footer {
   }
 }
 
+.to-top {
+  display: none;
+  position: fixed;
+      top: 600px;
+    right: 20px;
+    border: none;
+    cursor: pointer;
+    transform: rotate(-90deg);
+    width: 45px;
+    height: 45px;
+    background: rgba(0,0,0,0.3);
+
+    &:hover{
+      border: 1px solid @text-color-pink;
+    }
+}
+
+.to-top-show {
+  display: block;
+}
+
 @media screen and (min-width: 480px) {
   .slider {
       position: relative;
