pingbuller - all js works awfull, have too many troubles

--- a/ping/src/css/style.less
+++ b/ping/src/css/style.less
@@ -40,6 +40,7 @@ body {
   font-size: 16px;
   line-height: 24px;
   background-image: url(../../img/body-bg.jpg);
+  // background-color: darken(@text-color-pink, 10%);
   background-position-x: center;
   background-repeat: no-repeat;
 }
