--- a/ping/src/css/style.less
+++ b/ping/src/css/style.less
@@ -163,8 +163,6 @@ header {
    }
 }
 
-// iphone-img - 274px-434px
-
 .about {
   width: 100%;
   padding-left: 12px;
@@ -353,9 +351,9 @@ footer {
 }
 
 .to-top {
-  display: none;
-  position: fixed;
-      top: 600px;
+    display: none;
+    position: fixed;
+    top: 600px;
     right: 20px;
     border: none;
     cursor: pointer;
@@ -363,6 +361,10 @@ footer {
     width: 45px;
     height: 45px;
     background: rgba(0,0,0,0.3);
+    
+    & .glyphicon-chevron-up {
+        transform: rotate(90deg);
+    }
 
     &:hover{
       border: 1px solid @text-color-pink;
@@ -461,6 +463,7 @@ footer {
     border-radius: 8px;
     opacity: 0.9;
         z-index: 2;
+      transition: all 1s;
 
     ul {
       flex-direction: column;
@@ -683,7 +686,3 @@ footer {
   }
 
 }
-
-// has horizontal scroll on 768px and 960px
-//  133x37
-// @media screen and (max-width: 767[x])
