sedona - add some styling to content and new files

--- a/sedona/src/scss/components/welcome-screen.scss
+++ b/sedona/src/scss/components/welcome-screen.scss
@@ -2,6 +2,7 @@
     padding-top: 75px;
     text-align: center;
     text-transform: uppercase;
+    font-family: $font;
     
     &__inner {
         @include inner-container;  
