--- a/sedona/src/scss/style.scss
+++ b/sedona/src/scss/style.scss
@@ -1,5 +1,7 @@
 // variables 
 //fonts
+@import "../../fonts/fonts.css";
+
 $font: 'pt_sans_regular', Arial, sans-serif;
 $font-size: 14px;
 $line-height: $font-size*1.2;
@@ -10,7 +12,9 @@ $line-height-headings: $font-size-headings*1.2;
 $inner-width: 300px;
 //colors
 //blue
-$main-collor: #81b3d2;
+$main-color: #81b3d2;
+$gray: #eeeeee;
+$brown: #766357;
 
 //mixins
 @mixin inner-container {
@@ -40,7 +44,7 @@ body {
     font-size: 0px;
     border: none;
     background-color: white;
-    border-top: 4px solid $main-collor;
+    border-top: 4px solid $main-color;
     cursor: pointer;
     
     &:before {
@@ -51,7 +55,7 @@ body {
         left: 0;
         width: 24px;
         height: 4px;
-        background-color: $main-collor;
+        background-color: $main-color;
     }
     
     &:after {
@@ -62,7 +66,7 @@ body {
         left: 0;
         width: 24px;
         height: 4px;
-        background-color: $main-collor;
+        background-color: $main-color;
     }
     
 }
@@ -73,9 +77,38 @@ body {
 
 @import "components/welcome-screen.scss";
 
+.greetings-text {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: $font;
+    
+    &__header {
+        margin-top: 40px;
+        margin-bottom: 40px;
+        font-family: $font-headings;
+        font-size: $font-size-headings;
+        line-height: 26px;
+    }
+    
+    &__text {
+        margin-bottom: 25px;
+        line-height: 20px;
+    }
+}
+
 @import "components/city-content.scss";
 
 @import "components/tourism-essentials.scss";
 
 @import "components/bridge-content.scss";
 
+@import "components/tourism-features.scss";
+
+@import "components/hotel-search.scss";
+
+@import "components/search-form.scss";
+
+@import "components/page-footer.scss";
