sedona - add some svg on welcome-screen, fix sizes on 768px

--- a/sedona/src/scss/style.scss
+++ b/sedona/src/scss/style.scss
@@ -15,6 +15,7 @@ $inner-width: 300px;
 $main-color: #81b3d2;
 $gray: #eeeeee;
 $brown: #766357;
+$gorgeous-brown: #83746a;
 
 //mixins
 @mixin inner-container {
