--- a/sedona/src/scss/components/welcome-screen.scss
+++ b/sedona/src/scss/components/welcome-screen.scss
@@ -9,25 +9,62 @@
     &__wrapper {
         display: flex;
         flex-direction: column;
+    }
+    
+    svg {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    &__first-text {
+        margin-top: 40px;
+        margin-bottom: 15px;
+        fill: $main-color;
+    }
+    
+    &__gorgeous-text {
+        fill: $gorgeous-brown;
+        margin-bottom: 55px;
+    }
+    
+    &__sedona-text {
+        width: 280px;
+        height: 50px;
+        fill: white;
+        margin-bottom: 68px;
+    }
+    
+    &__because-text {
+        fill: white;
+        margin-bottom: 50px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .welcome-screen {
+        &__inner {
+            width: auto;
+        }
         
-        img {
-            max-width: 100%;
-            height: auto;
-            margin-left: auto;
-            margin-right: auto;
-            
-            &:nth-of-type(1) {
-                margin-top: 47px;
-                margin-bottom: 60px; 
-            }
-            
-            &:nth-of-type(2) {
-                margin-bottom: 70px;
-            }
-            
-            &:nth-of-type(3) {
-                margin-bottom: 50px;
-            }
+        &__first-text {
+            width: 280px;
+            height: 50px;
+        }
+        
+        &__gorgeous-text {
+            width: 300px;
+            height: 35px;
+        }
+        
+        &__sedona-text {
+            width: 480px;
+            height: 80px;
+        }
+        
+        &__because-text {
+            width: 300px;
+            height: 90px;
+            margin-bottom: 90px;
         }
     }
 }
