--- a/sedona/src/scss/components/page-footer.scss
+++ b/sedona/src/scss/components/page-footer.scss
@@ -70,3 +70,24 @@
         }
     }
 }
+
+@media screen and (min-width: 768px) {
+    .page-footer {
+        
+        &__inner {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-left: 40px;
+            padding-right: 40px;
+        }
+        
+        &__copyright {
+            margin-top: 0;
+        }
+        
+        &__heading {
+            margin-bottom: 0;
+        }
+    }
+}
