--- a/sedona/src/scss/components/tourism-essentials.scss
+++ b/sedona/src/scss/components/tourism-essentials.scss
@@ -1,6 +1,7 @@
 .tourism-essentials {
     width: 100%;
     padding-top: 75px;
+    margin-bottom: 40px;
     text-transform: uppercase;
     font-family: $font;
     
@@ -12,5 +13,73 @@
     
      &__inner {
         @include inner-container;
+    }
+    
+    &__list-item {
+        padding-right: 25px;
+        
+        h3 {
+            display: inline-block;
+            vertical-align: middle;
+        }
+        
+        p {
+            padding-left: 50px;
+        }
+    }
+    
+    &__list-item-icon {
+        display: inline-block;
+        vertical-align: middle;
+        width: 45px;
+        
+        svg {
+            width: 40px;
+            height: 40px;
+            fill: $main-color;
+        }
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .tourism-essentials {
+        margin-bottom: 60px;
+        
+        &__inner {
+            width: 100%;
+        }
+        
+        &__list {
+            display: flex;
+        }
+        
+        &__list-item {
+            padding-right: 0px;
+            text-align: center;
+            
+            h3 {
+                display: block;
+                font-size: 22px;
+            }
+            
+            p {
+                padding-left: 0;
+                width: 76%;
+                margin-left: auto;
+                margin-right: auto;
+                font-size: 16px;
+                line-height: 22px;
+            }
+        }
+        
+        &__list-item-icon {
+            display: block;
+            width: auto;
+            
+            svg {
+                width: 80px;
+                height: 75px;
+            }
+        }
     }
 }
