--- a/sedona/src/scss/components/tourism-features.scss
+++ b/sedona/src/scss/components/tourism-features.scss
@@ -27,3 +27,37 @@
         }
     }
 }
+
+@media screen and (min-width: 768px) {
+    .tourism-features {
+        &__inner {
+            width: 100%;
+        }
+        
+        &__list {
+            display: flex;
+            width: 100%;
+        }
+        
+        &__list-item {
+            border-bottom: none;
+            
+            h3 {
+                font-size: 22px;
+                line-height: 26px;
+                padding-left: 30px;
+                padding-right: 30px;
+            }
+            
+            p {
+                width: 76%;
+                margin-left: auto;
+                margin-right: auto;
+                font-size: 16px;
+                line-height: 22px;
+                word-wrap: break-word;
+//                как сделать перенос слова с черточкой
+            }
+        }
+    }
+}
