--- a/sedona/src/scss/style.scss
+++ b/sedona/src/scss/style.scss
@@ -82,6 +82,7 @@ body {
     width: 95%;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 50px;
     text-align: center;
     text-transform: uppercase;
     font-family: $font;
