--- a/sedona/src/scss/style.scss
+++ b/sedona/src/scss/style.scss
@@ -36,45 +36,7 @@ body {
 //header-block
 @import "components/page-header.scss";
 
-.main-nav__hamb {
-    display: block;
-    width: 24px;
-    position: absolute;
-    top: 24px;
-    right: 10px;
-    font-size: 0px;
-    border: none;
-    background-color: white;
-    border-top: 4px solid $main-color;
-    cursor: pointer;
-    
-    &:before {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 4px;
-        left: 0;
-        width: 24px;
-        height: 4px;
-        background-color: $main-color;
-    }
-    
-    &:after {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 12px;
-        left: 0;
-        width: 24px;
-        height: 4px;
-        background-color: $main-color;
-    }
-    
-}
-.main-nav {
-    position: absolute;
-    display: none;
-}
+@import "components/main-nav.scss";
 
 @import "components/welcome-screen.scss";
 
