--- a/cf-maker/src/scss/components/welcome-screen.scss
+++ b/cf-maker/src/scss/components/welcome-screen.scss
@@ -8,6 +8,7 @@
     color: white;
     
     &__heading {
+        font-family: $font-heading;
         font-size: 2.7em;
         line-height: 1em;
         text-transform: uppercase;
