cf-maker - add bycicle-accordion-part on vanilla

--- a/cf-maker/src/scss/components/study-plan.scss
+++ b/cf-maker/src/scss/components/study-plan.scss
@@ -11,4 +11,12 @@
     &__list-item {
         text-align: left;
     }
+    
+//    &__hidden {
+//        display: none;
+//    }
+}
+
+.js-study-plan__hidden {
+    display: none;
 }
