cf-maker - add styling to tabs-header, some tabs-content sizeing, stars on welcome-page

--- a/cf-maker/src/scss/var.scss
+++ b/cf-maker/src/scss/var.scss
@@ -4,6 +4,7 @@ $main-color: #eab96a;
 $additional-color: #cdb47b;
 $textcolor-with-bg: white;
 $textcolor-without-bg: black;
+$gray: #adadad;
 //fonts
 
 // don't understand where is this font
