--- a/cf-maker/src/scss/components/page-header.scss
+++ b/cf-maker/src/scss/components/page-header.scss
@@ -2,6 +2,7 @@
     position: fixed;
     width: 100%;
     background-color: black;
+    z-index: 10;
     
     &__inner {
         display: flex;
