--- a/cf-maker/src/scss/var.scss
+++ b/cf-maker/src/scss/var.scss
@@ -5,6 +5,7 @@ $additional-color: #cdb47b;
 $textcolor-with-bg: white;
 $textcolor-without-bg: black;
 $gray: #adadad;
+$gray-line: darken(#adadad, 20%);
 //fonts
 
 // don't understand where is this font
