--- a/cf-maker/src/scss/components/programs.scss
+++ b/cf-maker/src/scss/components/programs.scss
@@ -33,6 +33,10 @@
         padding-left: 5%;
         padding-right: 5%;
     }
+    
+    &__table-info {
+        clear: both;
+    }
 }
 
 @media screen and (min-width: 960px) {
